--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Jogos</button>
+                <button class="botao ativo">Jeps</button>
                 <button class="botao">Estudar</button>
                 <button class="botao">Juntar Dinheiro</button>
                 <button class="botao">Habilitação</button>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Juntar dinheiro até final do ano</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,23 +86,23 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Completar 18</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias3">7</p>
+                            <p class="contador-digito-numero" id="dias3"></p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="horas3">7</p>
+                            <p class="contador-digito-numero" id="horas3"></p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="min3">7</p>
+                            <p class="contador-digito-numero" id="min3"></p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="seg3">7</p>
+                            <p class="contador-digito-numero" id="seg3"></p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
